src/test/ui/span/issue28498-reject-lifetime-param.stderr
error[E0597]: `last_dropped` does not live long enough
  --> $DIR/issue28498-reject-lifetime-param.rs:32:20
   |
LL |     foo0 = Foo(0, &last_dropped);
   |                    ^^^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `last_dropped` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `first_dropped` does not live long enough
  --> $DIR/issue28498-reject-lifetime-param.rs:34:20
   |
LL |     foo1 = Foo(1, &first_dropped);
   |                    ^^^^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `first_dropped` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
